fix: sufficient contrast #1739

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -39,7 +39,7 @@ $grey-shade: #c4c4c4;
 $navy: #203149;
 $navy-light: #2e405b;
 $blue-alt: #5c81a9;
-$blue-alt-contrast: #5879a0;
+$blue-alt-contrast: #486484;
 $blue-alt-dark: #4d6b8d;
 $blue-alt-light: #8caabb;
 $blue-grey: #abdde9;
